# dep-health

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  dep-report.md  go.mod  go.sum  main.go  progress.md  serve.sh
advisor/: advisor.go  advisor_test.go  anthropic.go
cmd/: root.go  scan.go  scan_multi.go  serve.go
config/: config.go
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BlockedPanel.jsx  CascadePanel.jsx  DepsTable.jsx  RiskBadge.jsx  StatusBadge.jsx  cascadeColor.js
frontend/src/pages/: ScanDetail.jsx  ScanList.jsx
models/: models.go
pipeline/: multi.go  pipeline.go  pipeline_test.go
resolver/: resolver.go  resolver_test.go
scanner/: gomod.go  gomod_test.go  pom.go  pom_test.go  pyproject.go  pyproject_test.go  requirements.go  requirements_test.go  scanner.go  scanner_test.go  setupcfg.go  setupcfg_test.go
scorer/: conflict_test.go  conflicts.go  scorer.go
server/: server.go  server_test.go  session.go
store/: store.go  store_test.go
testdata/cascade/: package.json
testdata/go-only/: go.mod
testdata/java-maven/: pom.xml
testdata/mixed/: go.mod  package.json  requirements.txt
testdata/no-deps/: go.mod  package.json  requirements.txt
testdata/npm-only/: package.json
testdata/python-only/: requirements.txt
testdata/python-pyproject/: pyproject.toml
testdata/python-setupcfg/: setup.cfg
web/: embed.go
