[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-health-test-pyproject"
version = "1.0.0"
description = "Fixture: PEP 621 pyproject.toml with intentionally old dependencies"
requires-python = ">=3.8"
dependencies = [
    "Django==3.2.0",
    "djangorestframework==3.12.4",
    "requests[security]>=2.25.0",
    "celery==4.4.7",
    "redis==3.5.3",
    "Pillow==8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==6.2.5",
    "pytest-django==4.3.0",
    "black==21.5b2",
    "isort==5.9.3",
]
