[metadata]
name = dep-health-test-setupcfg
version = 1.0.0
description = Fixture: setup.cfg with intentionally old dependencies

[options]
python_requires = >=3.7
packages = find:
install_requires =
    Flask==1.1.4
    SQLAlchemy==1.3.23
    alembic==1.5.8
    marshmallow==3.12.2
    gunicorn==20.0.4
    psycopg2-binary==2.8.6

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-flask==1.2.0
    coverage==5.5
    flake8==3.9.2
